--- a/src/index.css
+++ b/src/index.css
@@ -388,15 +388,17 @@
      border: none;
      border-radius: 5px;
      padding: .3rem .8rem;
-     color: var(--neutral-color-gray1);
      text-transform: capitalize;
      color: var(--primary-color-20);
 
 
  }
 
+ .vans--item {
+     align-items: cen
+ }
+
  .van--btn {
-     margin-top: 0.5rem;
      padding: 0.3rem 0.8rem;
  }
 
@@ -412,14 +414,10 @@
      background-color: var(--neutral-color-black);
  }
 
-
-
-
-
  .vans--list {
      display: grid;
      grid-template-columns: 1fr 1fr;
-     gap: 2rem;
+     gap: 1.5rem;
      padding: 3rem 1.7rem 2rem 1.7rem;
      font-family: var(--ff-inter);
      font-size: var(--fs-300);
@@ -442,4 +440,65 @@
 
  .van--price>span {
      font-size: var(--fs-300);
+ }
+
+
+ /*Van Details*/
+
+ .van-details-container {
+
+     padding: 4rem 1.4rem;
+     background: var(--primary-color-40);
+     font-family: var(--ff-inter);
+ }
+
+ .van--details {
+     display: flex;
+     flex-direction: column;
+ }
+
+ .van--details .van--image {
+
+     border-radius: 8px;
+     margin-block: 47px;
+ }
+
+ .van--btn {
+     align-self: flex-start;
+ }
+
+ .van--title {
+     padding-top: 1rem;
+     font-weight: 700;
+     font-size: var(--fs-600);
+ }
+
+ .van--price {
+     font-weight: 700;
+     font-size: var(--fs-500);
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     margin-bottom: 0.5rem;
+ }
+
+ .van--description {
+     font-size: var(--fs-300);
+     text-align: left;
+ }
+
+ .book--btn {
+     margin-top: 1rem;
+     background: var(--secondary-color-100);
+
+     border: none;
+     border-radius: 5px;
+     padding: .3rem .8rem;
+     text-transform: capitalize;
+     color: var(--primary-color-20);
+ }
+
+ .book--btn:hover {
+     background: var(--secondary-color-80);
+
  }
