--- a/src/index.css
+++ b/src/index.css
@@ -273,6 +273,7 @@
  .about--container {
      display: flex;
      flex-direction: column;
+     margin-bottom: 2rem;
  }
 
  .about--img {
@@ -545,9 +546,9 @@
 
  /*HostLayout*/
 
- 
+
  .host--navbar a {
-    
+
      font-size: var(--fs-300);
      padding-top: 2rem;
      color: var(--neutral-color-gray1);
@@ -555,47 +556,80 @@
  }
 
  .host--navbar a:hover {
-    text-decoration: underline;
-    font-weight: 600;
-    color: var(--neutral-color-black);
+     text-decoration: underline;
+     font-weight: 600;
+     color: var(--neutral-color-black);
 
  }
 
 
  .host-van-single {
+     display: flex;
+     align-items: center;
+     background-color: white;
+     margin-bottom: 15px;
+     padding-block: 18px;
+     padding-left: 24px;
+     font-size: var(--fs-300);
+
+ }
+
+ .host-van-single>img {
+     height: 70px;
+     border-radius: 5px;
+     margin-right: 17px;
+ }
+
+ .host-vans-title {
+     margin: 2rem 0 .5rem 2rem;
+     font-size: var(--fs-500);
+     font-weight: 500;
+ }
+
+
+ .host-vans-list {
+     padding-inline: 26px;
+ }
+
+ .host-van-info h3 {
+     font-size: var(--fs-400);
+     font-weight: 600;
+     margin-block: 10px;
+ }
+
+ .host-van-info p {
+     margin-block: 10px;
+ }
+
+ /*Host Vans Details */
+
+ .host-van-details--container {
+     background-color: var(--primary-color-20);
+     padding: 1.5rem;
+     margin: 2rem 1.5rem;
+ }
+
+ .host-van-details{
     display: flex;
     align-items: center;
-    background-color: white;
-    margin-bottom: 15px;
-    padding-block: 18px;
-    padding-left: 24px;
-    font-size: var(--fs-300);
-    
-}
+ }
+ .host-van-details-img {
+     height: 40vw;
+     border-radius: 5px;
+     margin-right: 1.5rem;
+ }
 
-.host-van-single > img {
-    height: 70px;
-    border-radius: 5px;
-    margin-right: 17px;
-}
-
-.host-vans-title {
-    margin: 2rem 0 .5rem 2rem;
-    font-size: var(--fs-500);
-    font-weight: 500;
-}
-
-
-.host-vans-list {
-    padding-inline: 26px;
-}
-
-.host-van-info h3 {
+ .host-van-details-info-text > h3 {
+    margin-bottom: 0.3rem;
+    margin-top: 1.5rem;
+    font-weight: 700;
     font-size: var(--fs-400);
-    font-weight: 600;
-    margin-block: 10px;
-}
+    font-family: var(--ff-inter);
 
-.host-van-info p {
-    margin-block: 10px;
-}
+ }
+
+ 
+ .host-van-details-info-text > h4 {
+    margin-block: 0;
+    font-size: var(--fs-300);
+ }
