implementing login with action and error handling

--- a/src/index.css
+++ b/src/index.css
@@ -735,3 +735,8 @@
     margin-top: 1.8rem;
     color: var(--primary-color-20);
 }
+
+.login--form > button:disabled {
+    background-color: var(--secondary-color-60);
+    cursor: not-allowed;
+}
